--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -50,6 +50,9 @@ jobs:
       - name: Inspect hc-spring-lib/target
         run: ls -lart hc-spring-lib/target
 
+      - name: Inspect hc-spring-test/target
+        run: ls -lart hc-spring-test/target
+
       - name: Inspect hc-auth-api/target
         run: ls -lart hc-auth-api/target
 
@@ -59,6 +62,13 @@ jobs:
         with:
           name: hc-spring-lib-target
           path: hc-spring-lib/target/
+
+      - name: Upload hc-spring-test target
+        if: github.ref == 'refs/heads/main'
+        uses: actions/upload-artifact@v4
+        with:
+          name: hc-spring-test-target
+          path: hc-spring-test/target/
 
       - name: Upload hc-auth-api target
         if: github.ref == 'refs/heads/main'
@@ -145,7 +155,7 @@ jobs:
           subject-digest: ${{ steps.push.outputs.digest }}
           push-to-registry: true
 
-  maven-publish:
+  maven-publish-lib:
     if: ${{ github.ref == 'refs/heads/main' }}
 
     runs-on: ubuntu-latest
@@ -174,6 +184,53 @@ jobs:
         with:
           name: hc-spring-lib-target
           path: hc-spring-lib/target/
+
+      - name: Inspect working directory
+        run: |
+          echo "Working directory..."
+          pwd
+          ls -lart
+
+      - name: List target dirs
+        run: find . -type d -name "target"
+
+      - name: Inspect target
+        run: ls -lart target
+
+      - name: Publish to GitHub Packages
+        run: mvn --batch-mode deploy
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  maven-publish-test:
+    if: ${{ github.ref == 'refs/heads/main' }}
+
+    runs-on: ubuntu-latest
+    needs: verify
+    defaults:
+      run:
+        working-directory: hc-spring-test
+
+    permissions:
+      contents: read
+      packages: write
+
+    steps:
+      - name: Checkout GitHub repo
+        uses: actions/checkout@v4
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+          cache: maven
+
+      - name: Download maven target
+        uses: actions/download-artifact@v4
+        with:
+          name: hc-spring-test-target
+          path: hc-spring-test/target/
 
       - name: Inspect working directory
         run: |
